--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name _;
 
     root /usr/share/nginx/html;
     index index.html;
@@ -9,8 +9,8 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Cache estático (opcional)
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+    # Cache para arquivos estáticos (opcional)
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff2?|ttf|otf|eot)$ {
         expires 1y;
         access_log off;
         add_header Cache-Control "public";
